--- a/public/assets/css/hero.css
+++ b/public/assets/css/hero.css
@@ -45,33 +45,10 @@
   width: 100%;
 }
 
-body {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+.landing-text {
+  z-index: 10000;
+  position: absolute;
+  top: 50%;
+  left: 42%;
   color: #fff;
-}
-
-.is-dark {
-  background-color: #F62459;
-  background-image: url('https://images.unsplash.com/photo-1466637574441-749b8f19452f?dpr=1&amp;auto=format&amp;fit=crop&amp;w=767&amp;h=767&amp;q=80&amp;cs=tinysrgb&amp;crop=&amp;bg=');
-  background-position: center;
-  background-size: cover;
-}
-.nav {
-  /*padding: 20px 0;*/
-}
-.hero.is-dark .nav-item a:not(.button), .hero.is-dark a.nav-item {
-    /*color: #fff;*/
-    padding: 0 30px;
-}
-
-.promo-img {
-  border-radius: 10px;
-  border: 10px solid #fff;
-}
-
-.footer {
-  padding-top: 1%;
-  padding-right: 3%;
-  padding-left: 3%;
-  padding-bottom: 3%;
 }
