--- a/public/assets/css/hero.css
+++ b/public/assets/css/hero.css
@@ -20,7 +20,6 @@
   width: 100%;
   overflow: hidden;
   background: #000;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
 
 .video-container .poster img {
@@ -52,4 +51,9 @@
   top: 50%;
   left: 42%;
   color: #fff;
+}
+
+.overColor {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) !important;
+  background-size: cover;
 }
