--- a/public/assets/css/hero.css
+++ b/public/assets/css/hero.css
@@ -53,7 +53,7 @@
   color: #fff;
 }
 
-@media only screen and (max-width 1137px) {
+@media only screen and (min-width 1137px) {
   .homepage-hero-module {
     border-right: none;
     border-left: none;
